--- a/Resources/views/states.html.twig
+++ b/Resources/views/states.html.twig
@@ -8,7 +8,7 @@
     </div>
 
     <script type="text/javascript">
-        require(['jquery', 'oro/dialog-widget', 'orowindows/js/dialog/state/model'],
+        require(['jquery', 'oro/dialog-widget', 'orowindows/js/dialog/state/model', 'appEvent!controller:ready'],
         function($, DialogWidget, StateModel) {
             $(function(){
                 {% for windowState in windowStates if windowState.renderedSuccessfully %}
